Add score scene Add score save Draft version of gameKey